# myna_browser_extension

./: .gitignore  Install.ps1  Pipfile  README.md  README_en.md  Uninstall.ps1  extension.json.in  install.bat  install.sh  meson.build  meson_options.txt  pyproject.toml  uninstall.bat  uninstall.sh
extension/: manifest.json
extension/src/: main.js  msg.js  useragent.js  utils.js
extension/src/common/: card.js  msg.js  pin_reader.js  useragent.js  utils.js
extension/src/mykey/: main.js  utils.js
extension/src/mynaportal/: main.js  utils.js
src/: __main__.py  main.py  meson.build
src/_internal/: card.py
src/internal/: __init__.py  msg.py
src/myna_browser_extension_nmh/: module.py
