[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "myna_browser_extension"
version = "0.1.0"
description = "Native messaging client for Japan Individual Card (aka My Number Card) browser extension"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "COPYING"}
authors = [
    {email = "inspc43313@yahoo.co.jp"},
    {name = "Nozomi Miyamori"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "pyscard >= 2.0.0"
]

[project.urls]
repository = "https://github.com/nm004/myna_browser_extension"

[project.scripts]
myna_browser_extension_nmh = "myna_browser_extension_nmh.module:main"

